fix: overlapping of divs

--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@
   text-align: center;
   margin: 15px;
 }
+.footer {
+    clear:left;
+}
 
 @media (max-width: 375px) {
   .root {
